@startuml

title __ENTITY's Class Diagram__\n

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace entity {
        class com.upf.nli.analyzer.semantic_analyzer.entity.AnswerEntity {
            - needFrame : boolean
            - needInfo : boolean
            - needQuestion : boolean
            - var1 : Object
            - var2 : Object
            + getVar1()
            + getVar2()
            + isNeedFrame()
            + isNeedInfo()
            + isNeedQuestion()
            + setNeedFrame()
            + setNeedInfo()
            + setNeedQuestion()
            + setVar1()
            + setVar2()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace entity {
        class com.upf.nli.analyzer.semantic_analyzer.entity.GreetingEntity {
            - answer : String
            {static} - greeting : List<GreetingEntity>
            - question : String
            + GreetingEntity()
            {static} + checkForTheGreeting()
            + getAnswer()
            + getQuestion()
            + setAnswer()
            + setQuestion()
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace entity {
        class com.upf.nli.analyzer.semantic_analyzer.entity.QueryEntity {
            - info : List<Object>
            - needInfo : boolean
            + QueryEntity()
            + addInfo()
            + getFrame()
            + getInfo()
            + getQuestion()
            + isNeedInfo()
            + setFrame()
            + setNeedInfo()
            + setQuestion()
            + toString()
            - setInfo()
        }
      }
    }
  }
  

  com.upf.nli.analyzer.semantic_analyzer.entity.QueryEntity o-- com.upf.nli.analyzer.semantic_analyzer.domain.Frame : frame
  com.upf.nli.analyzer.semantic_analyzer.entity.QueryEntity o-- com.upf.nli.analyzer.semantic_analyzer.domain.Attribute : question


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
